# meshboard

./: .env.template  Cargo.toml  Makefile  PI_ZERO_2_SETUP.md  RASPBERRY_BLE.md  README.md  build.rs
src/: display.rs  main.rs  mesh.rs  repl.rs  screen.rs  service.rs  storage.rs  telegram.rs  tool.rs  utils.rs
src/bbs/: mod.rs  repl.rs  service.rs  storage.rs
src/bbs/storage/: in_memory.rs  mod.rs
src/mesh/: mod.rs  router.rs  service.rs  types.rs
