[package]
name = "meshboard"
version = "0.1.0-alpha"
edition = "2024"

[build-dependencies]
chrono = "0.4"

[features]
default = []
repl = []

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
meshtastic = { version="0.1.8", features = ["tokio", "bluetooth-le"] }
mini-moka = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["signal"] }
tokio-util = "0.7.17"
native_db = "0.8.2"
native_model = "0.4.20"
sha2 = "0.10.9"
hex = "0.4.3"
epd-waveshare = "0.6.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.4.1"
